crates/test-ui/ui/extern_methods_invalid_method_family.stderr
error: The #[method_family] attribute is unsafe, and must be used as #[unsafe(method_family = none)]
 --> ui/extern_methods_invalid_method_family.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[unsafe(method(noUnsafe))]
  | |         #[method_family = none]
... |
  | | );
  | |_^
  |
  = note: this error originates in the macro `$crate::__extract_method_attributes_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot specify the `method_family` attribute twice
 --> ui/extern_methods_invalid_method_family.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[unsafe(method(familyTwice))]
  | |         #[unsafe(method_family = copy)]
... |
  | | );
  | |_^
  |
  = note: this error originates in the macro `$crate::__handle_duplicate` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `unknown` in module `$crate::__macro_helpers::method_family_import`
 --> ui/extern_methods_invalid_method_family.rs
  |
  |         #[unsafe(method_family = unknown)]
  |                                  ^^^^^^^ not found in `$crate::__macro_helpers::method_family_import`
